chore: adding tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ Flask-PyMongo = "^2.3.0"
 [tool.poetry.dev-dependencies]
 black = {version = "^22.6.0", allow-prereleases = true}
 ipdb = "^0.13.9"
+pytest = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
